--- a/reports/cyclistic_bikeshare_report.Rmd
+++ b/reports/cyclistic_bikeshare_report.Rmd
@@ -192,9 +192,23 @@ missing_obs <- data_raw %>%
 
 Upon inspection, it was discovered that certain variables related to station identification and location data exhibited notable gaps:
 
-- `start_station_name` and `start_station_id` each had 874,450 missing observations.
-- `end_station_name` and `end_station_id` each had 929,226 missing observations.
-- `end_lat` and `end_lng`, which denote the latitude and longitude of the end station, each had 7,566 missing values.     
+```{r missing_values_table, warning=FALSE, message=FALSE, echo=FALSE}
+missing_values <- c(0, 0, 0, 0, 874450, 874450, 929226, 929226, 0, 0, 7566, 7566, 0)
+
+missing_info <- tibble(variable_name, missing_values)
+
+# Display only the variables with missing data
+missing_info %>%
+  filter(
+    missing_values > 0
+  ) %>%
+  kable(
+    caption = "Missing values",
+    col.names = c("Variable", "Missing values")
+  ) %>%
+  custom_table_theme()
+```
+
 
 These findings indicate significant missing data in station identifiers and geolocation details, which could affect spatial analysis and ride linkage accuracy. Such gaps will necessitate careful consideration in subsequent stages of data cleaning and analysis to ensure that conclusions drawn are based on comprehensive and accurate information.
 
@@ -202,7 +216,8 @@ These findings indicate significant missing data in station identifiers and geol
 
 Analyzing the consistency and accuracy of categorical variables is essential for ensuring data integrity. In this analysis, the `dplyr` package was employed to count and evaluate the distinct categories present in the `rideable_type` and `member_casual` variables.
 
-rideable_type: This variable categorizes the types of bikes used in the trips. While only `classic_bike` and `electric_bike` were expected based on company records, an additional category, `docked bike`, was identified, which was not anticipated:
+##### Rideable_type variable     
+The `rideable_type` variable categorizes the types of bikes used in the trips. While only `classic_bike` and `electric_bike` were expected based on company records, an additional category, `docked bike`, was identified, which was not anticipated:
 
 ```{r count_rideable_type, echo=TRUE, eval=FALSE}
 count_rideable_type <- data_raw %>%
@@ -210,6 +225,8 @@ count_rideable_type <- data_raw %>%
 ```
 
 The presence of `docked bike` raises questions about its meaning, as it could potentially refer to bikes that are either not clearly classified between the two expected types or perhaps represent bikes that have been temporarily removed from active service for maintenance. This ambiguity requires further investigation to accurately interpret the data involving this category.
+
+##### Member_casual variable     
 
 member_casual: For the member_casual variable, which distinguishes between members (annual subscribers) and casual riders (non-subscribers), the results were as expected. Only the two anticipated values, "member" and "casual," were found, confirming the accuracy of data entries for this variable:
 
@@ -220,5 +237,42 @@ count_member_casual <- data_raw %>%
 
 This assessment underscores the importance of validating categorical data against expected outcomes to ensure the reliability of analyses based on these classifications. For the `rideable_type` variable, particularly, the unexpected category will be noted for potential adjustments in the analysis framework or for clarification from data management teams.
 
-#### Remove unnecessary variables
+### Data transformation     
+
+The data transformation process involves several steps aimed at refining the dataset to enhance the quality and relevance of the analysis. These transformations are crucial for ensuring that the data is clean, properly structured, and ready for detailed analytical tasks. The following transformations were performed on the Cyclistic dataset:
+
+#### Remove unnecessary variables     
+
+Initially, the dataset included variables related to station identification, specifically the names and IDs of start and end stations (start_station_name, start_station_id, end_station_name, end_station_id). These variables comprised the majority of missing data within the dataset, posing potential challenges for complete and accurate analysis. While station identification information could offer valuable insights for future studies, particularly in understanding spatial patterns and usage trends, it was not pertinent to the current analysis's objectives. Consequently, to streamline the dataset and focus on the most relevant variables for examining user behavior and bike usage patterns, these station identification variables were removed:
+
+```{r remove_irrelevant_vars, echo=TRUE, eval=FALSE}
+irrelevant_vars <- c(
+  "start_station_name",
+  "start_station_id",
+  "end_station_name",
+  "end_station_id"
+)
+
+data_processed <- data_raw %>%
+  select(-all_of(irrelevant_vars))
+```
+
+This step not only reduced the complexity of the data but also minimized the impact of the missing data on the overall analysis, ensuring a more focused and efficient analytical process.
+
+#### Remove missing values
+
+The presence of missing values can hinder the accuracy and reliability of the analysis. To address this issue, the dataset was filtered to exclude rows with missing values in the latitude and longitude columns for both the start and end stations. This step was crucial for ensuring the integrity of geospatial analyses and visualizations that rely on accurate location data:     
+
+```{r remove_missing_values, echo=TRUE, eval=FALSE}
+data_processed <- data_processed %>%
+  filter(
+    !is.na(end_lat),
+    !is.na(end_lng)
+  )
+
+obs_nonmissing <- data_processed %>%
+  nrow_lazy_dt()
+```
+
+
 
