--- a/reports/cyclistic_bikeshare_report.Rmd
+++ b/reports/cyclistic_bikeshare_report.Rmd
@@ -154,7 +154,7 @@ The data inspection process serves as a preliminary check to ensure the quality 
 To begin, we examined the overall structure and type of the data contained within the dataset. This was accomplished using the `glimpse()` function from the `dplyr` package, which provides a compact display of the types of each column along with a quick view of the first few entries in each:
 
 ```{r}
-data_raw %>% 
+data_raw %>%
   glimpse()
 ```
 
@@ -269,10 +269,192 @@ data_processed <- data_processed %>%
     !is.na(end_lat),
     !is.na(end_lng)
   )
+```
 
-obs_nonmissing <- data_processed %>%
+
+#### Remove invalid categories
+
+During the initial data inspection phase, it was noted that all categorical variables conformed to expected categories except for one unexpected entry in the rideable_type variable. The rideable_type included an unforeseen category labeled "docked bike," which was not anticipated based on the operational definitions provided for the dataset. This category's presence raised questions about its definition, as it could potentially represent a classification error, bikes taken out of active circulation for maintenance, or another unspecified category.
+
+Given the uncertainty surrounding the "docked bike" category and its deviation from the expected "classic bike" and "electric bike" categories, a decision was made to exclude this category from the current analysis. This approach ensures that the analysis remains focused on well-defined and understood categories, thus maintaining the integrity of the analytical outcomes:
+
+```{r remove_invalid_categories, echo=TRUE, eval=FALSE}
+data_processed <- data_processed %>%
+  filter(!rideable_type %in% "docked_bike")
+```
+
+This exclusion is a critical step in refining the dataset, ensuring that subsequent analyses are based on reliable and valid categorical data, and aligns with the predefined scope of the study.
+
+#### Convert data types
+
+In R, particularly within the tidyverse, it's crucial to ensure that categorical variables are correctly typed as factors. This conversion facilitates efficient handling of categorical data in functions used for statistical modeling and plotting. Factors help define a set of unique values that R recognizes, optimizing both memory use and processing.
+
+Converting rideable_type and member_casual from characters to factors ensures that these variables are appropriately processed during analysis, preventing potential errors and improving performance:
+
+```{r convert_data_types, echo=TRUE, eval=FALSE}
+data_processed <- data_processed %>%
+  mutate(
+    rideable_type = as.factor(rideable_type),
+    member_casual = as.factor(member_casual)
+  )
+```
+
+This conversion is part of the data preprocessing to prepare the dataset for more complex analytical tasks, ensuring that the data adheres to the best practices for data analysis in R.
+
+#### Rename variables
+
+To improve readability and consistency within the dataset, variable names were standardized:    
+
+```{r rename_variables, echo=TRUE, eval=FALSE}
+data_processed <- data_processed %>%
+  rename(
+    bike_type = rideable_type,
+    rider_type = member_casual,
+    start_timestamp = started_at,
+    end_timestamp = ended_at,
+    start_latitude = start_lat,
+    start_longitude = start_lng,
+    end_latitude = end_lat,
+    end_longitude = end_lng
+  )
+```
+
+Standardizing variable names enhances clarity and coherence within the dataset, making it easier to interpret and analyze the data effectively. This step is essential for maintaining consistency and ensuring that all variables are clearly labeled and identifiable throughout the analysis process.
+
+#### Create additional variables
+
+To enhance the dataset with additional information that could provide deeper insights into riding patterns, several new variables were created. Each variable is derived from existing data but is designed to facilitate more specific analyses:
+
+```{r additional_var_table, warning=FALSE, message=FALSE, echo=FALSE, results='asis'}
+additional_variables <- tribble(
+  ~Variable, ~Description,
+  "`ride_duration`", "Represents the duration of the ride in minutes. This is calculated from the difference between the start and end timestamps, providing a quantitative measure of ride length.",
+  "`ride_month`", "Indicates the month in which the ride started. This variable can help analyze monthly usage patterns and seasonal variations in bike usage.",
+  "`ride_week`", "Identifies the week number relative to the beginning of the dataset, allowing for analysis of weekly trends or changes over time.",
+  "`ride_day_of_week`", "Specifies the day of the week the ride began. This categorical variable is useful for understanding daily usage patterns, such as distinguishing between weekday and weekend trends.",
+  "`ride_start_hour`", "Captures the hour of the day the ride started, which can be crucial for identifying peak usage times during the day.",
+  "`day_type`", "Categorizes each ride as either occurring on a 'Weekday' or 'Weekend.' This differentiation can help in analyzing differences in riding behavior between workdays and leisure days.",
+  "`ride_distance`", "Measures the straight-line distance of the ride, calculated using the Haversine formula to determine the 'as the crow flies' distance between the start and end coordinates. This provides an estimate of the spatial extent of each ride."
+)
+
+# Display only the variables with missing data
+additional_variables %>%
+kable(
+    caption = "Additional variables",
+    format = "html"
+  ) %>%
+  custom_table_theme()
+
+```
+
+
+The creation of these variables was performed using R's mutate function within the tidyverse, as follows:
+
+```{r create_additional_variables, echo=TRUE, eval=FALSE}
+data_processed <- data_processed %>%
+  mutate(
+    ride_duration = as.numeric(difftime(
+      end_timestamp,
+      start_timestamp,
+      units = "mins"
+    )),
+    ride_month = as.Date(floor_date(start_timestamp, "month")),
+    ride_week = floor_date(start_timestamp, "week"),
+    ride_day_of_week = factor(wday(start_timestamp, label = TRUE)),
+    ride_start_hour = factor(hour(start_timestamp)),
+    day_type = factor(ifelse(
+      ride_day_of_week %in% c("Sat", "Sun"),
+      "Weekend",
+      "Weekday"
+    )),
+    ride_distance = distHaversine(
+      cbind(start_longitude, start_latitude),
+      cbind(end_longitude, end_latitude)
+    )
+  )
+```
+
+These transformations enhance the dataset and prepare it for in-depth exploratory and predictive analyses, ensuring that the data is well-suited for comprehensive and advanced analytical tasks.
+
+#### Remove outliers    
+
+Removing outliers is crucial to maintaining the integrity of the data analysis. We focused on eliminating atypical values in ride duration and distance that could potentially distort the results.     
+
+##### Ride duration
+
+```{r anomalous_duration, echo=TRUE, eval=FALSE}
+# Check for anomalous ride duration
+min_duration <- 1
+max_duration <- 180
+
+# Count anomalous durations
+anomalous_duration <- data_processed %>%
+  count_anomalies(ride_duration, min_duration, max_duration)
+
+# Remove rides with anomalous duration
+data_processed <- data_processed %>%
+  remove_anomalies(ride_duration, min_duration, max_duration)
+```
+
+For ride duration, we established thresholds based on realistic expectations and specific operational insights provided by the bike-share program. The minimum duration was set at 1 minute to account for "false starts" or instances where users might re-dock their bikes shortly after undocking to ensure the bike was securely locked. According to the dataset guidelines provided by the company, any trip recorded under 1 minute is likely not a genuine trip but rather an operational anomaly such as this.
+
+The maximum allowable duration was set at 180 minutes (3 hours). This upper limit is designed to exclude rides that unusually extend beyond normal usage patterns, which might indicate situations where bikes were removed for maintenance but their operational status was not updated correctly in the system. Such errors can occur and lead to falsely prolonged ride times being recorded.
+
+##### Ride distance     
+
+For ride distance, outliers were addressed by setting statistical thresholds based on the distribution of the data. The maximum distance (max_distance) was calculated as three times the interquartile range (IQR) above the 75th percentile. This approach helps in identifying and removing extreme distances that are significantly higher than typical rides, which could be due to recording errors or unusual ride patterns.
+
+The minimum distance threshold (min_distance) was set at the 1st percentile of positive distances to filter out rides that are improbably short, potentially indicative of errors like GPS discrepancies at the start or end of a ride.
+
+```{r anomalous_distance, echo=TRUE, eval=FALSE}
+ride_distance_stats <- data_processed %>%
+  calculate_summary_stats(ride_distance)
+
+# Calulate IQR
+iqr_distance <- ride_distance_stats$q75 - ride_distance_stats$q25
+
+# Calculate maximum threshold
+max_distance <- ride_distance_stats$q75 + 3 * iqr_distance
+
+# Calculate 99th percentile for the minimum threshold
+min_distance <- data_processed %>%
+  filter(ride_distance > 0) %>%
+  summarise(min_dist = quantile(ride_distance, 0.01)) %>%
+  pull()
+
+# Count anomalous distances
+anomalous_distance <- data_processed %>%
+  count_anomalies(ride_distance, min_distance, max_distance)
+
+# Remove rides with anomalous distance
+data_processed <- data_processed %>%
+  remove_anomalies(ride_distance, min_distance, max_distance)
+
+obs_nonanomalous <- data_processed %>%
   nrow_lazy_dt()
 ```
+
+By meticulously defining and applying these thresholds, we ensure that the dataset is free of extreme values, thereby enhancing the reliability and accuracy of the analyses derived from it.
+
+## Data analysis     
+
+The data analysis phase was designed to uncover actionable insights on how Cyclistic's annual members and casual riders utilize the bike-share system differently. Through a combination of statistical methods and graphical techniques, the analysis aimed to highlight distinct usage patterns and preferences between the two rider types. Here are the key steps and findings from this in-depth analysis:
+
+### Exploratory data analysis
+
+#### Force computation of the dataset    
+
+The initial step in the data analysis involved converting the data from a lazy_dt format to a tibble. This step was necessary because lazy_dt in R defers computation, meaning it doesn't actually perform operations until explicitly instructed. This feature is useful for optimizing performance and managing memory usage during data manipulation, especially with large datasets. However, to proceed with detailed analysis and visualization, it was crucial to collect the data into a tibble, which realizes the dataset and makes it directly accessible for the subsequent analytical tasks.
+
+```{r force_computation, echo=TRUE, eval=FALSE}
+data_processed <- collect(data_processed)
+```
+
+
+
+
+
+
 
 
 
